--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Code
@@ -24,42 +25,31 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install nuitka
+          pip install pyinstaller
           pip install -r requirements.txt
-
-      - name: Install ccache
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-            sudo apt-get update
-            sudo apt-get install -y ccache
-      - name: Install ccache
-        if: matrix.os == 'macos-latest'
-        run: |
-            brew update
-            brew install ccache
 
       - name: Build Binary
         run: |
           mkdir -p dist
-          python -m nuitka --standalone --onefile anki_assign_tags.py --output-dir=dist
+          python -m pyinstaller --onefile anki_assign_tags.py
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         if: matrix.os == 'ubuntu-latest'
         with:
           name: linux-binary
-          path: dist/anki_assign_tags.bin
+          path: dist/anki_assign_tags
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         if: matrix.os == 'macos-latest'
         with:
           name: macos-binary
-          path: dist/anki_assign_tags.bin
+          path: dist/anki_assign_tags
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         if: matrix.os == 'windows-latest'
         with:
           name: windows-binary
-          path: dist/anki_assign_tags.bin
+          path: dist/anki_assign_tags
