--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     name: build binaries
@@ -25,12 +24,11 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
-          pip install -r requirements.txt
+          python -m pip install pyinstaller
+          python -m pip install -r requirements.txt
 
       - name: Build Binary
         run: |
-          mkdir -p dist
           python -m pyinstaller --onefile anki_assign_tags.py
 
       - name: Upload Artifact
