--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pyinstaller
-          python -m pip install -r requirements.txt
+          pip install pyinstaller
+          pip install -r requirements.txt
 
       - name: Build Binary
         run: |
-          python -m pyinstaller --onefile anki_assign_tags.py
+          pyinstaller --onefile anki_assign_tags.py
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
